--- a/src/app/property/property-detail/property-detail.component.html
+++ b/src/app/property/property-detail/property-detail.component.html
@@ -1,4 +1,10 @@
 <p>
   property-detail works!
   the id is {{propertyId}}
+
+  <br> <br>
+  <button (click)="onSelectNext()" class="btn btn-primary">Select Next Page</button>
+
+  <br> <br>
+  <button (click)="onSelectNext()" class="btn btn-primary">Select Next Page</button>
 </p>
