--- a/src/app/property/property-card/property-card.component.css
+++ b/src/app/property/property-card/property-card.component.css
@@ -1,9 +1,19 @@
-h1 {
-  font-size: normal;
+.card {
+  min-height: 400px;
+}
+
+.card-body h2 {
+  font-family: fantasy;
+  color: #0069d9;
 }
 
 .card-img-wrapper {
   overflow: hidden;
+}
+
+.font-highlight {
+  font-style: italic;
+  color: red;
 }
 
 .card:hover img {
